@@ -19,346 +19,666 @@ package org.apache.ignite.internal.sql.engine.prepare.ddl;
 
 import static org.apache.ignite.internal.catalog.CatalogService.DEFAULT_STORAGE_PROFILE;
 import static org.apache.ignite.internal.lang.IgniteStringFormatter.format;
-import static org.apache.ignite.internal.sql.engine.prepare.ddl.ZoneOptionEnum.STORAGE_PROFILES;
-import static org.hamcrest.CoreMatchers.instanceOf;
-import static org.hamcrest.CoreMatchers.is;
+import static org.apache.ignite.internal.testframework.IgniteTestUtils.assertThrows;
+import static org.apache.ignite.internal.testframework.IgniteTestUtils.assertThrowsWithCode;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.instanceOf;
+import static org.hamcrest.Matchers.is;
+import static org.mockito.Mockito.mock;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 import org.apache.calcite.sql.SqlDdl;
 import org.apache.calcite.sql.SqlNode;
 import org.apache.calcite.sql.parser.SqlParseException;
+import org.apache.ignite.internal.catalog.CatalogCommand;
+import org.apache.ignite.internal.catalog.CatalogValidationException;
+import org.apache.ignite.internal.catalog.commands.AlterZoneCommand;
+import org.apache.ignite.internal.catalog.commands.AlterZoneSetDefaultCommand;
+import org.apache.ignite.internal.catalog.commands.DropZoneCommand;
+import org.apache.ignite.internal.catalog.commands.RenameZoneCommand;
+import org.apache.ignite.internal.catalog.descriptors.CatalogStorageProfileDescriptor;
+import org.apache.ignite.internal.catalog.descriptors.CatalogZoneDescriptor;
+import org.apache.ignite.internal.catalog.descriptors.ConsistencyMode;
+import org.apache.ignite.internal.catalog.storage.AlterZoneEntry;
+import org.apache.ignite.internal.catalog.storage.DropZoneEntry;
+import org.apache.ignite.internal.catalog.storage.NewZoneEntry;
+import org.apache.ignite.internal.catalog.storage.SetDefaultZoneEntry;
+import org.apache.ignite.internal.partitiondistribution.DistributionAlgorithm;
 import org.apache.ignite.lang.ErrorGroups.Sql;
-import org.apache.ignite.lang.IgniteException;
-import org.hamcrest.Matchers;
+import org.apache.ignite.sql.SqlException;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.mockito.Mockito;
 
 /**
  * Tests the conversion of a sql zone definition to a command.
  */
+@SuppressWarnings("ThrowableNotThrown")
 public class DistributionZoneSqlToCommandConverterTest extends AbstractDdlSqlToCommandConverterTest {
 
-    private static final List<String> NUMERIC_OPTIONS = Arrays.asList("PARTITIONS", "REPLICAS", "DATA_NODES_AUTO_ADJUST",
-            "DATA_NODES_AUTO_ADJUST_SCALE_UP", "DATA_NODES_AUTO_ADJUST_SCALE_DOWN");
-
-    private static final List<String> STRING_OPTIONS = Arrays.asList(
-            "AFFINITY_FUNCTION",
-            "DATA_NODES_FILTER",
-            "STORAGE_PROFILES"
+    private static final List<ZoneOptionEnum> NUMERIC_OPTIONS = List.of(
+            ZoneOptionEnum.PARTITIONS,
+            ZoneOptionEnum.REPLICAS,
+            ZoneOptionEnum.QUORUM_SIZE,
+            ZoneOptionEnum.DATA_NODES_AUTO_ADJUST,
+            ZoneOptionEnum.DATA_NODES_AUTO_ADJUST_SCALE_UP,
+            ZoneOptionEnum.DATA_NODES_AUTO_ADJUST_SCALE_DOWN
     );
 
-    @Test
-    public void testCreateZone() throws SqlParseException {
-        SqlNode node = parse("CREATE ZONE test WITH STORAGE_PROFILES='" + DEFAULT_STORAGE_PROFILE + "'");
+    private static final List<ZoneOptionEnum> STRING_OPTIONS = List.of(
+            ZoneOptionEnum.DISTRIBUTION_ALGORITHM,
+            ZoneOptionEnum.DATA_NODES_FILTER,
+            ZoneOptionEnum.CONSISTENCY_MODE
+    );
 
-        assertThat(node, instanceOf(SqlDdl.class));
+    @BeforeAll
+    public static void setUp() {
+        assertThat(ZoneOptionEnum.values().length, is(NUMERIC_OPTIONS.size() + STRING_OPTIONS.size()));
+    }
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testCreateZone(boolean withPresent) throws SqlParseException {
+        CatalogCommand cmd = convert(withPresent
+                ? "CREATE ZONE test WITH STORAGE_PROFILES='" + DEFAULT_STORAGE_PROFILE + "'"
+                : "CREATE ZONE test STORAGE PROFILES ['" + DEFAULT_STORAGE_PROFILE + "']");
 
-        assertThat(cmd, Matchers.instanceOf(CreateZoneCommand.class));
+        CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, NewZoneEntry.class).descriptor();
 
-        CreateZoneCommand zoneCmd = (CreateZoneCommand) cmd;
+        assertThat(desc.name(), equalTo("TEST"));
 
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
+        assertThat(desc.consistencyMode(), equalTo(ConsistencyMode.STRONG_CONSISTENCY));
+    }
+
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testCreateZoneWithConsistencyModeStrongConsistency(boolean withPresent) throws SqlParseException {
+        String sql = withPresent
+                ? "CREATE ZONE test WITH storage_profiles='" + DEFAULT_STORAGE_PROFILE + "',"
+                        + " CONSISTENCY_MODE='" + ConsistencyMode.STRONG_CONSISTENCY.name() + "'"
+                : "CREATE ZONE test (CONSISTENCY MODE '" + ConsistencyMode.STRONG_CONSISTENCY.name() + "') "
+                        + "STORAGE PROFILES ['" + DEFAULT_STORAGE_PROFILE + "'] ";
+
+        CatalogCommand cmd = convert(sql);
+
+        CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, NewZoneEntry.class).descriptor();
+
+        assertThat(desc.consistencyMode(), equalTo(ConsistencyMode.STRONG_CONSISTENCY));
+    }
+
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testCreateZoneWithConsistencyModeHighAvailability(boolean withPresent) throws SqlParseException {
+        String sql = withPresent
+                ? "CREATE ZONE test WITH STORAGE_PROFILES='" + DEFAULT_STORAGE_PROFILE + "',"
+                        + " CONSISTENCY_MODE='" + ConsistencyMode.HIGH_AVAILABILITY + "'"
+                : "CREATE ZONE test (CONSISTENCY MODE '" + ConsistencyMode.HIGH_AVAILABILITY + "') "
+                        + "STORAGE PROFILES ['" + DEFAULT_STORAGE_PROFILE + "'] ";
+
+        CatalogCommand cmd = convert(sql);
+
+        CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, NewZoneEntry.class).descriptor();
+
+        assertThat(desc.consistencyMode(), equalTo(ConsistencyMode.HIGH_AVAILABILITY));
+    }
+
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testCreateZoneWithConsistencyModeInvalid(boolean withPresent) {
+        String sql = withPresent
+                ? "CREATE ZONE test WITH STORAGE_PROFILES='" + DEFAULT_STORAGE_PROFILE + "',"
+                        + " CONSISTENCY_MODE='MY_CUSTOM_MODE'"
+                : "CREATE ZONE test (CONSISTENCY MODE 'MY_CUSTOM_MODE') "
+                        + "STORAGE PROFILES ['" + DEFAULT_STORAGE_PROFILE + "'] ";
+
+        assertThrows(
+                SqlException.class,
+                () -> convert(sql),
+                "Failed to parse consistency mode: MY_CUSTOM_MODE. Valid values are: [STRONG_CONSISTENCY, HIGH_AVAILABILITY]"
+        );
     }
 
     @Test
-    public void testCreateZoneWithOptions() throws SqlParseException {
-        SqlNode node = parse("CREATE ZONE test with "
-                + "partitions=2, "
-                + "replicas=3, "
-                + "affinity_function='rendezvous', "
-                + "data_nodes_filter='\"attr1\" && \"attr2\"', "
-                + "data_nodes_auto_adjust_scale_up=100, "
-                + "data_nodes_auto_adjust_scale_down=200, "
-                + "data_nodes_auto_adjust=300, "
-                + "storage_profiles='lru_rocks, segmented_aipersist' "
-        );
+    public void testMixedOptions() {
+        String passed = "CREATE ZONE test with partitions=2, replicas=3, storage_profiles='p' S";
+        assertThrowsWithPos("CREATE ZONE test with partitions=2, replicas=3, storage_profiles='p' STORAGE PROFILES ['profile']",
+                "STORAGE", passed.length());
 
-        assertThat(node, instanceOf(SqlDdl.class));
+        passed = "CREATE ZONE test with (";
+        assertThrowsWithPos("CREATE ZONE test with (partitions 2, replicas 3, storage_profiles='p') STORAGE PROFILES ['profile']",
+                "(", passed.length());
+    }
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testCreateZoneWithOptions(boolean withPresent) throws SqlParseException {
+        // Check non-conflicting options.
+        {
+            String sql = withPresent
+                    ? "CREATE ZONE test with "
+                            + "partitions=2, "
+                            + "replicas=5, "
+                            + "quorum_size=2, " // non-default value
+                            + "distribution_algorithm='rendezvous', "
+                            + "data_nodes_filter='$[?(@.region == \"US\")]', "
+                            + "data_nodes_auto_adjust=300, "
+                            + "storage_profiles='lru_rocks , segmented_aipersist ' "
+                    : "CREATE ZONE test "
+                            + "(partitions 2, "
+                            + "replicas 5, "
+                            + "quorum size 2, " // non-default value
+                            + "distribution algorithm 'rendezvous', "
+                            + "nodes filter '$[?(@.region == \"US\")]', "
+                            + "auto adjust 300) "
+                            + "storage profiles ['lru_rocks', 'segmented_aipersist '] ";
 
-        CreateZoneCommand createZone = (CreateZoneCommand) cmd;
+            CatalogCommand cmd = convert(sql);
+            CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, NewZoneEntry.class).descriptor();
 
-        assertThat(createZone.partitions(), equalTo(2));
-        assertThat(createZone.replicas(), equalTo(3));
-        assertThat(createZone.affinity(), equalTo("rendezvous"));
-        assertThat(createZone.nodeFilter(), equalTo("\"attr1\" && \"attr2\""));
-        assertThat(createZone.dataNodesAutoAdjustScaleUp(), equalTo(100));
-        assertThat(createZone.dataNodesAutoAdjustScaleDown(), equalTo(200));
-        assertThat(createZone.dataNodesAutoAdjust(), equalTo(300));
-        assertThat(createZone.storageProfiles(), equalTo("lru_rocks, segmented_aipersist"));
+            assertThat(desc.partitions(), equalTo(2));
+            assertThat(desc.replicas(), equalTo(5));
+            assertThat(desc.quorumSize(), equalTo(2));
+            // TODO https://issues.apache.org/jira/browse/IGNITE-22162
+            // assertThat(desc.distributionAlgorithm(), equalTo("rendezvous"));
+            assertThat(desc.filter(), equalTo("$[?(@.region == \"US\")]"));
+            assertThat(desc.dataNodesAutoAdjust(), equalTo(300));
+
+            List<CatalogStorageProfileDescriptor> storageProfiles = desc.storageProfiles().profiles();
+            assertThat(storageProfiles, hasSize(2));
+            assertThat(storageProfiles.get(0).storageProfile(), equalTo("lru_rocks"));
+            assertThat(storageProfiles.get(1).storageProfile(), equalTo("segmented_aipersist"));
+        }
+
+        // Check remaining options.
+        {
+            String sql = withPresent
+                    ? "CREATE ZONE test with "
+                            + "data_nodes_auto_adjust_scale_up=100, "
+                            + "data_nodes_auto_adjust_scale_down=200, "
+                            + "storage_profiles='lru_rocks'"
+                    : "CREATE ZONE test "
+                            + "(auto scale up 100, "
+                            + "auto scale down 200) "
+                            + "storage profiles ['lru_rocks']";
+
+            CatalogCommand cmd = convert(sql);
+            CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, NewZoneEntry.class).descriptor();
+
+            assertThat(desc.dataNodesAutoAdjustScaleUp(), equalTo(100));
+            assertThat(desc.dataNodesAutoAdjustScaleDown(), equalTo(200));
+        }
 
         // Check option validation.
-        node = parse("CREATE ZONE test with partitions=-1");
-        expectOptionValidationError((SqlDdl) node, "PARTITION");
-
-        node = parse("CREATE ZONE test with replicas=-1");
-        expectOptionValidationError((SqlDdl) node, "REPLICAS");
-
-        node = parse("CREATE ZONE test with storage_profiles='' ");
-        expectOptionValidationError((SqlDdl) node, "STORAGE_PROFILES");
+        if (withPresent) {
+            expectOptionValidationError("CREATE ZONE test with partitions=-1, storage_profiles='p'", "PARTITION");
+            expectOptionValidationError("CREATE ZONE test with replicas=-1, storage_profiles='p'", "REPLICAS");
+            assertThrowsWithPos("CREATE ZONE test with replicas=FALL, storage_profiles='p'", "FALL", 32);
+            emptyProfilesValidationError("CREATE ZONE test with storage_profiles='' ");
+            emptyProfilesValidationError("CREATE ZONE test with storage_profiles=' ' ");
+        } else {
+            assertThrowsWithPos("CREATE ZONE test (partitions -1)", "-", 30);
+            assertThrowsWithPos("CREATE ZONE test (replicas -1)", "-", 28);
+            assertThrowsWithPos("CREATE ZONE test (replicas FALL)", "FALL", 28);
+            assertThrowsWithPos("CREATE ZONE test (replicas 1, partitions -1)", "-", 42);
+            assertThrowsWithPos("CREATE ZONE test storage_profiles ['']", "storage_profiles", 18);
+            assertThrowsParseException("CREATE ZONE test (distribution algorithm '')", "Validation Error: Empty character literal "
+                    + "is not allowed in this context.");
+            assertThrowsParseException("CREATE ZONE test storage profiles ['']", "Validation Error: Empty character literal "
+                    + "is not allowed in this context.");
+            assertThrowsParseException("CREATE ZONE test storage profiles [' ']", "Validation Error: Empty character literal "
+                    + "is not allowed in this context.");
+        }
     }
 
-    @Test
-    public void testCreateZoneWithoutStorageProfileOptionShouldThrowError() throws SqlParseException {
-        SqlNode node =  parse("CREATE ZONE test");
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testCreateZoneWithReplicasAll(boolean withPresent) throws SqlParseException {
+        String sql = withPresent
+                ? "CREATE ZONE test WITH STORAGE_PROFILES='" + DEFAULT_STORAGE_PROFILE + "', REPLICAS=ALL"
+                : "CREATE ZONE test (REPLICAS ALL) STORAGE PROFILES ['" + DEFAULT_STORAGE_PROFILE + "']";
 
-        assertThat(node, instanceOf(SqlDdl.class));
+        CatalogCommand cmd = convert(sql);
 
-        var ex = assertThrows(
-                IgniteException.class,
-                () -> converter.convert((SqlDdl) node, createContext())
-        );
+        CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, NewZoneEntry.class).descriptor();
 
-        assertThat(ex.getMessage(), containsString(STORAGE_PROFILES + " option cannot be null"));
-
-        SqlNode newNode =  parse("CREATE ZONE test with replicas=1");
-
-        assertThat(newNode, instanceOf(SqlDdl.class));
-
-        ex = assertThrows(
-                IgniteException.class,
-                () -> converter.convert((SqlDdl) newNode, createContext())
-        );
-
-        assertThat(ex.getMessage(), containsString(STORAGE_PROFILES + " option cannot be null"));
+        assertThat(desc.replicas(), equalTo(DistributionAlgorithm.ALL_REPLICAS));
     }
 
-    @Test
-    public void testCreateZoneWithDuplicateOptions() throws SqlParseException {
-        SqlNode node = parse("CREATE ZONE test with partitions=2, replicas=0, PARTITIONS=1");
+    private static List<Arguments> defaultQuorum() {
+        return List.of(
+                Arguments.of(1, 1),
+                Arguments.of(2, 2),
+                Arguments.of(5, 3),
+                Arguments.of(10, 3)
+        );
+    }
 
-        assertThat(node, instanceOf(SqlDdl.class));
+    @ParameterizedTest(name = "replicas = {0}, expectedQuorum = {1}")
+    @MethodSource("defaultQuorum")
+    public void testCreateZoneWithQuorumDefault(int replicas, int expectedQuorum) throws SqlParseException {
+        String sql = "CREATE ZONE test WITH REPLICAS=" + replicas + ", STORAGE_PROFILES='" + DEFAULT_STORAGE_PROFILE + "'";
 
-        expectDuplicateOptionError((SqlDdl) node, "PARTITIONS");
+        CatalogCommand cmd = convert(sql);
+
+        CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, NewZoneEntry.class).descriptor();
+
+        assertThat(desc.quorumSize(), equalTo(expectedQuorum));
+    }
+
+    private static List<Arguments> correctQuorumSize() {
+        return List.of(
+                Arguments.of(1, 1),
+                Arguments.of(2, 2),
+                Arguments.of(5, 2),
+                Arguments.of(10, 5)
+        );
+    }
+
+    @ParameterizedTest(name = "(replicas = {0}, quorum size = {1})")
+    @MethodSource("correctQuorumSize")
+    public void testCreateZoneWithQuorum(int replicas, int quorum) throws SqlParseException {
+        String sql = "CREATE ZONE test (REPLICAS " + replicas + ", QUORUM SIZE " + quorum
+                + ") STORAGE PROFILES ['" + DEFAULT_STORAGE_PROFILE + "']";
+
+        CatalogCommand cmd = convert(sql);
+
+        CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, NewZoneEntry.class).descriptor();
+
+        assertThat(desc.quorumSize(), equalTo(quorum));
+    }
+
+    private static List<Arguments> invalidQuorumSize() {
+        return List.of(
+                Arguments.of(1, 2),
+                Arguments.of(2, 3),
+                Arguments.of(5, 4),
+                Arguments.of(10, 1)
+        );
+    }
+
+    @ParameterizedTest(name = "(replicas {0}, quorum size {1})")
+    @MethodSource("invalidQuorumSize")
+    public void testCreateZoneWithInvalidQuorum(int replicas, int quorum) {
+        String sql = "CREATE ZONE test (REPLICAS " + replicas + ", QUORUM SIZE " + quorum
+                + ") STORAGE PROFILES ['" + DEFAULT_STORAGE_PROFILE + "']";
+
+        // We can't properly validate quorum size in the parser, so the exception is thrown from the catalog command validation instead.
+        assertThrows(
+                CatalogValidationException.class,
+                () -> convert(sql),
+                "Specified quorum size doesn't fit into the specified replicas count"
+        );
+    }
+
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testCreateZoneWithoutStorageProfileOptionShouldThrowError(boolean withPresent) {
+        assertThrowsWithPos("CREATE ZONE test", "<EOF>", 16);
+
+        if (withPresent) {
+            emptyProfilesValidationError("CREATE ZONE test with replicas=1");
+        } else {
+            assertThrowsWithPos("CREATE ZONE test (replicas 1)", "<EOF>", 29);
+        }
+    }
+
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testCreateZoneWithDuplicateOptions(boolean withPresent) {
+        String sql = withPresent
+                ? "CREATE ZONE test with partitions=2, replicas=0, PARTITIONS=1, STORAGE_PROFILES='profile'"
+                : "CREATE ZONE test (partitions 2, replicas 0, PARTITIONS 1) STORAGE PROFILES ['profile']";
+
+        expectDuplicateOptionError(sql, "PARTITIONS");
     }
 
     @Test
     public void testRenameZoneCommand() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE test RENAME TO test2");
+        CatalogCommand cmd = convert("ALTER ZONE test RENAME TO test2");
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
-        assertThat(cmd, Matchers.instanceOf(AlterZoneRenameCommand.class));
+        assertThat(cmd, instanceOf(RenameZoneCommand.class));
 
-        AlterZoneRenameCommand zoneCmd = (AlterZoneRenameCommand) cmd;
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
-        assertThat(zoneCmd.newZoneName(), equalTo("TEST2"));
-        assertThat(zoneCmd.ifExists(), is(false));
+        Mockito.when(catalog.zone("TEST")).thenReturn(mock(CatalogZoneDescriptor.class));
+
+        AlterZoneEntry entry = invokeAndGetFirstEntry(cmd, AlterZoneEntry.class);
+
+        assertThat(entry.descriptor().name(), equalTo("TEST2"));
+        assertThat(((RenameZoneCommand) cmd).ifExists(), is(false));
     }
 
     @Test
     public void testRenameZoneIfExistCommand() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE IF EXISTS test RENAME TO test2");
+        CatalogCommand cmd = convert("ALTER ZONE IF EXISTS test RENAME TO test2");
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
-        assertThat(cmd, Matchers.instanceOf(AlterZoneRenameCommand.class));
+        assertThat(cmd, instanceOf(RenameZoneCommand.class));
 
-        AlterZoneRenameCommand zoneCmd = (AlterZoneRenameCommand) cmd;
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
-        assertThat(zoneCmd.newZoneName(), equalTo("TEST2"));
+        RenameZoneCommand zoneCmd = (RenameZoneCommand) cmd;
+
+        Mockito.when(catalog.zone("TEST")).thenReturn(mock(CatalogZoneDescriptor.class));
+
+        AlterZoneEntry entry = invokeAndGetFirstEntry(cmd, AlterZoneEntry.class);
+
+        assertThat(entry.descriptor().name(), equalTo("TEST2"));
         assertThat(zoneCmd.ifExists(), is(true));
     }
 
-    @Test
-    public void testAlterZoneCommand() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE test SET replicas=3");
+    @ParameterizedTest(name = "obsolete = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testAlterZoneCommand(boolean obsolete) throws SqlParseException {
+        CatalogCommand cmd = convert(obsolete
+                ? "ALTER ZONE test SET replicas=5, quorum_size=3"
+                : "ALTER ZONE test SET (replicas 5, quorum size 3)"
+        );
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
-        assertThat(cmd, Matchers.instanceOf(AlterZoneSetCommand.class));
+        assertThat(cmd, instanceOf(AlterZoneCommand.class));
 
-        AlterZoneSetCommand zoneCmd = (AlterZoneSetCommand) cmd;
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
-        assertThat(zoneCmd.ifExists(), is(false));
+        CatalogZoneDescriptor zoneMock = mock(CatalogZoneDescriptor.class);
+
+        Mockito.when(zoneMock.name()).thenReturn("TEST");
+        Mockito.when(zoneMock.filter()).thenReturn("");
+
+        Mockito.when(catalog.zone("TEST")).thenReturn(zoneMock);
+
+        CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, AlterZoneEntry.class).descriptor();
+
+        assertThat(desc.name(), equalTo("TEST"));
+        assertThat(desc.replicas(), is(5));
+        assertThat(desc.quorumSize(), is(3));
+        assertThat(((AlterZoneCommand) cmd).ifExists(), is(false));
     }
 
-    @Test
-    public void testAlterZoneIfExistsCommand() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE IF EXISTS test SET replicas=3");
+    @ParameterizedTest(name = "obsolete = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testAlterZoneIfExistsCommand(boolean obsolete) throws SqlParseException {
+        CatalogCommand cmd = convert(obsolete ? "ALTER ZONE IF EXISTS test SET replicas=3" : "ALTER ZONE IF EXISTS test SET (replicas 3)");
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
-        assertThat(cmd, Matchers.instanceOf(AlterZoneSetCommand.class));
-
-        AlterZoneSetCommand zoneCmd = (AlterZoneSetCommand) cmd;
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
-        assertThat(zoneCmd.ifExists(), is(true));
+        assertThat(cmd, instanceOf(AlterZoneCommand.class));
+        assertThat(((AlterZoneCommand) cmd).ifExists(), is(true));
     }
 
-    @Test
-    public void testAlterZoneSetCommand() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE test SET "
-                + "replicas=3, "
-                + "partitions=8, "
-                + "data_nodes_filter='\"attr1\" && \"attr2\"', "
-                + "data_nodes_auto_adjust_scale_up=100, "
-                + "data_nodes_auto_adjust_scale_down=200, "
-                + "data_nodes_auto_adjust=300");
+    @ParameterizedTest(name = "obsolete = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testAlterZoneSetCommand(boolean obsolete) throws SqlParseException {
+        // Check non-conflicting options.
+        {
+            String sql = obsolete
+                    ? "ALTER ZONE test SET "
+                            + "replicas=5, "
+                            + "quorum_size=3, "
+                            + "data_nodes_filter='$[?(@.region == \"US\")]', "
+                            + "data_nodes_auto_adjust=300"
+                    : "ALTER ZONE test SET "
+                            + "(replicas 5, "
+                            + "quorum size 3, "
+                            + "nodes filter '$[?(@.region == \"US\")]', "
+                            + "auto adjust 300)";
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
-        assertThat(cmd, Matchers.instanceOf(AlterZoneSetCommand.class));
+            CatalogCommand cmd = convert(sql);
 
-        AlterZoneSetCommand zoneCmd = (AlterZoneSetCommand) cmd;
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
+            assertThat(cmd, instanceOf(AlterZoneCommand.class));
 
-        assertThat(zoneCmd.replicas(), equalTo(3));
-        assertThat(zoneCmd.partitions(), equalTo(8));
-        assertThat(zoneCmd.nodeFilter(), equalTo("\"attr1\" && \"attr2\""));
-        assertThat(zoneCmd.dataNodesAutoAdjustScaleUp(), equalTo(100));
-        assertThat(zoneCmd.dataNodesAutoAdjustScaleDown(), equalTo(200));
-        assertThat(zoneCmd.dataNodesAutoAdjust(), equalTo(300));
+            CatalogZoneDescriptor zoneMock = mock(CatalogZoneDescriptor.class);
+            Mockito.when(zoneMock.name()).thenReturn("TEST");
+            Mockito.when(zoneMock.filter()).thenReturn("");
+
+            Mockito.when(catalog.zone("TEST")).thenReturn(zoneMock);
+
+            CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, AlterZoneEntry.class).descriptor();
+
+            assertThat(desc.name(), equalTo("TEST"));
+
+            assertThat(desc.replicas(), equalTo(5));
+            assertThat(desc.quorumSize(), equalTo(3));
+            assertThat(desc.filter(), equalTo("$[?(@.region == \"US\")]"));
+            assertThat(desc.dataNodesAutoAdjust(), equalTo(300));
+        }
+
+        // Check remaining options.
+        {
+            String sql = obsolete
+                    ? "ALTER ZONE test SET "
+                            + "data_nodes_auto_adjust_scale_up=100, "
+                            + "data_nodes_auto_adjust_scale_down=200"
+                    : "ALTER ZONE test SET "
+                            + "(auto scale up 100, "
+                            + "auto scale down 200)";
+
+            CatalogCommand cmd = convert(sql);
+
+            assertThat(cmd, instanceOf(AlterZoneCommand.class));
+
+            CatalogZoneDescriptor zoneMock = mock(CatalogZoneDescriptor.class);
+            Mockito.when(zoneMock.name()).thenReturn("TEST");
+            Mockito.when(zoneMock.filter()).thenReturn("");
+
+            Mockito.when(catalog.zone("TEST")).thenReturn(zoneMock);
+
+            CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, AlterZoneEntry.class).descriptor();
+
+            assertThat(desc.name(), equalTo("TEST"));
+
+            assertThat(desc.dataNodesAutoAdjustScaleUp(), equalTo(100));
+            assertThat(desc.dataNodesAutoAdjustScaleDown(), equalTo(200));
+        }
+    }
+
+    @ParameterizedTest(name = "obsolete = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testAlterZoneReplicasAll(boolean obsolete) throws SqlParseException {
+        CatalogCommand cmd = convert(obsolete ? "ALTER ZONE test SET replicas=ALL" : "ALTER ZONE test SET (replicas ALL)");
+
+        assertThat(cmd, instanceOf(AlterZoneCommand.class));
+
+        CatalogZoneDescriptor zoneMock = mock(CatalogZoneDescriptor.class);
+        Mockito.when(zoneMock.name()).thenReturn("TEST");
+        Mockito.when(zoneMock.filter()).thenReturn("");
+
+        Mockito.when(catalog.zone("TEST")).thenReturn(zoneMock);
+
+        CatalogZoneDescriptor desc = invokeAndGetFirstEntry(cmd, AlterZoneEntry.class).descriptor();
+
+        assertThat(desc.replicas(), is(DistributionAlgorithm.ALL_REPLICAS));
     }
 
     @Test
     public void testAlterZoneSetDefault() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE test SET DEFAULT");
+        CatalogCommand cmd = convert("ALTER ZONE test SET DEFAULT");
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
-        assertThat(cmd, Matchers.instanceOf(AlterZoneSetDefaultCommand.class));
+        assertThat(cmd, instanceOf(AlterZoneSetDefaultCommand.class));
+
+        CatalogZoneDescriptor zoneMock = mock(CatalogZoneDescriptor.class);
+        Mockito.when(catalog.zone("TEST")).thenReturn(zoneMock);
+
+        SetDefaultZoneEntry entry = invokeAndGetFirstEntry(cmd, SetDefaultZoneEntry.class);
 
         AlterZoneSetDefaultCommand zoneCmd = (AlterZoneSetDefaultCommand) cmd;
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
+        assertThat(entry.zoneId(), is(zoneMock.id()));
         assertThat(zoneCmd.ifExists(), is(false));
     }
 
     @Test
     public void testAlterZoneSetDefaultIfExists() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE IF EXISTS test SET DEFAULT");
+        CatalogCommand cmd = convert("ALTER ZONE IF EXISTS test SET DEFAULT");
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
-        assertThat(cmd, Matchers.instanceOf(AlterZoneSetDefaultCommand.class));
+        assertThat(cmd, instanceOf(AlterZoneSetDefaultCommand.class));
 
-        AlterZoneSetDefaultCommand zoneCmd = (AlterZoneSetDefaultCommand) cmd;
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
-        assertThat(zoneCmd.ifExists(), is(true));
+        assertThat(((AlterZoneSetDefaultCommand) cmd).ifExists(), is(true));
     }
 
-    @Test
-    public void testAlterZoneCommandWithInvalidOptions() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE test SET replicas=2, data_nodes_auto_adjust=-100");
+    @ParameterizedTest(name = "obsolete = {0}, option = {1}")
+    @MethodSource("numericOptions")
+    public void testAlterZoneCommandWithInvalidOptions(boolean obsolete, ZoneOptionEnum option) {
+        String sql = obsolete
+                ? "ALTER ZONE test SET replicas=2, data_nodes_auto_adjust=-100"
+                : "ALTER ZONE test SET ({} -100)";
 
-        assertThat(node, instanceOf(SqlDdl.class));
-
-        expectOptionValidationError((SqlDdl) node, "DATA_NODES_AUTO_ADJUST");
+        if (obsolete) {
+            expectOptionValidationError(sql, "DATA_NODES_AUTO_ADJUST");
+        } else {
+            String sqlName = option.sqlName;
+            String prefix = "ALTER ZONE test SET (";
+            assertThrowsWithPos(format(sql, sqlName, "-100"), "-", prefix.length() + sqlName.length() + 1 /* start pos*/
+                    + 1 /* first symbol after bracket*/);
+        }
     }
 
-    @Test
-    public void testAlterZoneCommandWithDuplicateOptions() throws SqlParseException {
-        SqlNode node = parse("ALTER ZONE test SET replicas=2, data_nodes_auto_adjust=300, DATA_NODES_AUTO_ADJUST=400");
+    @ParameterizedTest(name = "obsolete = {0}")
+    @ValueSource(booleans = {true, false})
+    public void testAlterZoneCommandWithDuplicateOptions(boolean obsolete) throws SqlParseException {
+        String sql = obsolete
+                ? "ALTER ZONE test SET replicas=2, data_nodes_auto_adjust=300, DATA_NODES_AUTO_ADJUST=400"
+                : "ALTER ZONE test SET (replicas 2, auto adjust 300, AUTO ADJUST 400)";
 
-        assertThat(node, instanceOf(SqlDdl.class));
-
-        expectDuplicateOptionError((SqlDdl) node, "DATA_NODES_AUTO_ADJUST");
+        expectDuplicateOptionError(sql, ZoneOptionEnum.DATA_NODES_AUTO_ADJUST.sqlName);
     }
 
     @Test
     public void testDropZone() throws SqlParseException {
-        SqlNode node = parse("DROP ZONE test");
+        CatalogCommand cmd = convert("DROP ZONE test");
+
+        assertThat(cmd, instanceOf(DropZoneCommand.class));
+
+        CatalogZoneDescriptor zoneMock = mock(CatalogZoneDescriptor.class);
+        Mockito.when(catalog.zone("TEST")).thenReturn(zoneMock);
+
+        DropZoneEntry entry = invokeAndGetFirstEntry(cmd, DropZoneEntry.class);
+
+        assertThat(entry.zoneId(), is(zoneMock.id()));
+    }
+
+    @ParameterizedTest(name = "with syntax = {0}, option = {1}")
+    @MethodSource("numericOptions")
+    public void createZoneWithInvalidNumericOptionValue(boolean withPresent, ZoneOptionEnum option) {
+        String sql = withPresent ? "create zone test_zone with {}={}, storage_profiles='p'" : "create zone test_zone ({} {})";
+
+        if (withPresent) {
+            expectInvalidOptionType(format(sql, option, "'bar'"), option.name());
+        } else {
+            String sqlName = option.sqlName;
+            String prefix = "create zone test_zone (";
+            int errorPos = prefix.length() + sqlName.length() + 1 /* start pos*/ + 1 /* first symbol after bracket*/;
+
+            assertThrowsWithPos(format(sql, sqlName, "'bar'"), "\\'bar\\'", errorPos);
+            assertThrowsWithPos(format(sql, sqlName, "-1"), "-", errorPos);
+        }
+    }
+
+    @ParameterizedTest(name = "with syntax = {0}")
+    @ValueSource(booleans = {true, false})
+    public void createZoneWithUnexpectedOption(boolean withPresent) {
+        String sql = withPresent ? "create zone test_zone with ABC=1, storage_profiles='p'" : "create zone test_zone (ABC 1)";
+
+        if (withPresent) {
+            expectUnexpectedOption(sql, "ABC");
+        } else {
+            assertThrowsWithPos(sql, "ABC", 24);
+        }
+    }
+
+    @ParameterizedTest(name = "with syntax = {0}, option = {1}")
+    @MethodSource("stringOptions")
+    public void createZoneWithInvalidStringOptionValue(boolean withPresent, ZoneOptionEnum option) {
+        if (withPresent) {
+            String sql = format("create zone test_zone with {}={}, storage_profiles='p'", option.name(), "1");
+            expectInvalidOptionType(sql, option.name());
+        } else {
+            String sql = "create zone test_zone ({} {})";
+
+            String sqlName = option.sqlName;
+            String prefix = "create zone test_zone (";
+            assertThrowsWithPos(format(sql, sqlName, "1"), "1", prefix.length() + sqlName.length() + 1 /* start pos*/
+                    + 1 /* first symbol after bracket*/);
+        }
+    }
+
+    @Test
+    public void createZoneWithInvalidStorageProfiles() {
+        String profiles = "STORAGE PROFILES [";
+        String sql = "create zone test_zone {} {}]";
+
+        String prefix = "create zone test_zone ";
+
+        assertThrowsWithPos(format(sql, profiles, "1"), "1", prefix.length() + profiles.length() + 1 /* start pos*/
+                + 1 /* first symbol after bracket*/);
+    }
+
+    @ParameterizedTest
+    @MethodSource("pureNumericOptions")
+    public void alterZoneWithInvalidNumericOptionValue(ZoneOptionEnum optionParam) {
+        String sql = format("alter zone test_zone set {}={}", optionParam.name(), "'bar'");
+        expectInvalidOptionType(sql, optionParam.name());
+    }
+
+    @Test
+    public void alterZoneWithUnexpectedOption() {
+        expectUnexpectedOption("alter zone test_zone set ABC=1", "ABC");
+    }
+
+    private CatalogCommand convert(String query) throws SqlParseException {
+        SqlNode node = parse(query);
 
         assertThat(node, instanceOf(SqlDdl.class));
 
-        DdlCommand cmd = converter.convert((SqlDdl) node, createContext());
-
-        assertThat(cmd, Matchers.instanceOf(DropZoneCommand.class));
-
-        DropZoneCommand zoneCmd = (DropZoneCommand) cmd;
-
-        assertThat(zoneCmd.zoneName(), equalTo("TEST"));
+        return converter.convert((SqlDdl) node, createContext());
     }
 
-    @ParameterizedTest
-    @MethodSource("numericOptions")
-    public void createZoneWithInvalidNumericOptionValue(String optionName) throws Exception {
-        SqlDdl node = (SqlDdl) parse(format("create zone test_zone with {}={}", optionName, "'bar'"));
-        expectInvalidOptionType(node, optionName);
+    private void assertThrowsWithPos(String query, String encountered, int pos) {
+        assertThrowsParseException(query, format("Encountered \"{}\" at line 1, column {}.", encountered, pos));
     }
 
-    @Test
-    public void createZoneWithUnexpectedOption() throws SqlParseException {
-        SqlDdl node = (SqlDdl) parse("create zone test_zone with ABC=1");
-        expectUnexpectedOption(node, "ABC");
+    private void assertThrowsParseException(String query, String message) {
+        assertThrows(SqlParseException.class, () -> convert(query), message);
     }
 
-    @ParameterizedTest
-    @MethodSource("stringOptions")
-    public void createZoneWithInvalidStringOptionValue(String optionName) throws Exception {
-        SqlDdl node = (SqlDdl) parse(format("create zone test_zone with {}={}", optionName, "1"));
-        expectInvalidOptionType(node, optionName);
-    }
-
-    @ParameterizedTest
-    @MethodSource("numericOptions")
-    public void alterZoneWithInvalidNumericOptionValue(String optionName) throws Exception {
-        SqlDdl node = (SqlDdl) parse(format("alter zone test_zone set {}={}", optionName, "'bar'"));
-        expectInvalidOptionType(node, optionName);
-    }
-
-    @Test
-    public void alterZoneWithUnexpectedOption() throws SqlParseException {
-        SqlDdl node = (SqlDdl) parse("alter zone test_zone set ABC=1");
-        expectUnexpectedOption(node, "ABC");
-    }
-
-    @ParameterizedTest
-    @ValueSource(strings = "DATA_NODES_FILTER")
-    public void alterZoneWithInvalidStringOptionValue(String optionName) throws Exception {
-        SqlDdl node = (SqlDdl) parse(format("alter zone test_zone set {}={}", optionName, "1"));
-        expectInvalidOptionType(node, optionName);
-    }
-
-    private static Stream<String> numericOptions() {
+    private static Stream<ZoneOptionEnum> pureNumericOptions() {
         return NUMERIC_OPTIONS.stream();
     }
 
-    private static Stream<String> stringOptions() {
-        return STRING_OPTIONS.stream();
+    private static Stream<Arguments> numericOptions() {
+        return Stream.of(true, false).flatMap(t1 -> NUMERIC_OPTIONS.stream()
+                .map(t2 -> Arguments.of(t1, t2))
+        );
     }
 
-    private void expectOptionValidationError(SqlDdl node, String invalidOption) {
-        IgniteException ex = assertThrows(
-                IgniteException.class,
-                () -> converter.convert(node, createContext())
+    private static Stream<Arguments> stringOptions() {
+        return Stream.of(true, false).flatMap(t1 -> STRING_OPTIONS.stream()
+                .map(t2 -> Arguments.of(t1, t2))
         );
-
-        assertThat(ex.code(), equalTo(Sql.STMT_VALIDATION_ERR));
-        assertThat(ex.getMessage(), containsString("Zone option validation failed [option=" + invalidOption));
     }
 
-    private void expectInvalidOptionType(SqlDdl node, String invalidOption) {
-        IgniteException ex = assertThrows(
-                IgniteException.class,
-                () -> converter.convert(node, createContext())
-        );
-
-        assertThat(ex.code(), equalTo(Sql.STMT_VALIDATION_ERR));
-        assertThat(ex.getMessage(), containsString("Invalid zone option type [option=" + invalidOption));
+    private void expectOptionValidationError(String sql, String invalidOption) {
+        expectStatementValidationError(sql, "Zone option validation failed [option=" + invalidOption);
     }
 
-    private void expectUnexpectedOption(SqlDdl node, String invalidOption) {
-        IgniteException ex = assertThrows(
-                IgniteException.class,
-                () -> converter.convert(node, createContext())
-        );
-
-        assertThat(ex.code(), equalTo(Sql.STMT_VALIDATION_ERR));
-        assertThat(ex.getMessage(), containsString("Unexpected zone option [option=" + invalidOption));
+    private void emptyProfilesValidationError(String sql) {
+        expectStatementValidationError(sql, "STORAGE PROFILES can not be empty");
     }
 
-    private void expectDuplicateOptionError(SqlDdl node, String option) {
-        IgniteException ex = assertThrows(
-                IgniteException.class,
-                () -> converter.convert(node, createContext())
-        );
+    private void expectInvalidOptionType(String sql, String invalidOption) {
+        expectStatementValidationError(sql, "Invalid zone option type [option=" + invalidOption);
+    }
 
-        assertThat(ex.code(), equalTo(Sql.STMT_VALIDATION_ERR));
-        assertThat(ex.getMessage(), containsString("Duplicate zone option has been specified [option=" + option));
+    private void expectUnexpectedOption(String sql, String invalidOption) {
+        expectStatementValidationError(sql, "Unexpected zone option [option=" + invalidOption);
+    }
+
+    private void expectDuplicateOptionError(String sql, String option) {
+        expectStatementValidationError(sql, "Duplicate zone option has been specified [option=" + option);
+    }
+
+    private void expectStatementValidationError(String sql, String errorMessageFragment) {
+        assertThrowsWithCode(
+                SqlException.class,
+                Sql.STMT_VALIDATION_ERR,
+                () -> convert(sql),
+                errorMessageFragment
+        );
     }
 }
